@@ -1319,6 +1319,10 @@ Framework.prototype.init = function(http, config, port) {
 			process.exit(0);
 	});
 
+	process.on('SIGINT', function() {	    
+	    self.stop();
+	});
+
 	process.on('exit', function () {
 		
 		if (self.onExit)
@@ -1389,8 +1393,8 @@ Framework.prototype.init = function(http, config, port) {
 				}
 				self.onStatic(req, res);
 		   	});
-			req.resume();
 
+			req.resume();
     	   	return;
 		}
 
@@ -1467,12 +1471,11 @@ Framework.prototype.init = function(http, config, port) {
 					return;
        			}
 
-       			// parsujeme parametre z POST
+       			// get data from Request BODY, get POST data
    				internal.parsePOST(req, route.maximumSize);
        		}
        	};
 
-       	// spracujeme request
         req.on('end', function() {
 
         	if (!req.buffer.isExceeded && typeof(req.buffer.data) !== 'undefined' && req.buffer.data.length > 0) {
