@@ -1,11 +1,13 @@
 IN DEVELOPMENT ======= 1.2.1-0
 
-note: in node v0.10.0 problem with framework testing and SQLite3
+note: in node v0.10.0 problem SQLite3
 
 - added: node v0.10.0
+- added: framework - process SIGINT event
 
 - fixed: markdown parse link and image
 - fixed: template repository
+- fixed: utils.request (node v0.10)
 
 ======= 1.2.0-9
 
